--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,11 @@
 @import './scss/bootstrap.scss';
 @import './scss/bootstrap-custom.scss';
 
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap');
 
 html, body { height: 100%; }
-body { margin: 0; font-family: 'Inter'; }
+body { margin: 0; font-family: 'Inter', sans-serif; }
 
 /* Responsive */
 @include media-breakpoint-down(xl) {
