--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -1,7 +1,7 @@
 .engagement{
    
     .banner{
-        background-image: url('/assets/images/bg.png');
+        background-image: url('/assets/images/bg3.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
@@ -65,6 +65,7 @@
 .nav-tabs{
     border-bottom: 1px solid #dee2e6;
     margin-right: -65px;
+    margin-left: -65px;
 }
 .nav-tabs .nav-link.active, .nav-pills .show > .nav-link{
     background-color: #FCFCFC; 
@@ -77,8 +78,14 @@
 }
 .tabs{
     width: 340px;
-    margin-left: -70px;
+    background-color: #E56635;
 }
 .tabs1{
-    width: 385px;
+    width: 365px;
+    background-color: #E56635;
+}
+.nav-tabs .nav-link {
+    border: none !important;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
 }
