--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -11,8 +11,9 @@
  <div class="engagement-layout1">
     <div class="container">
       <div [ngbNavOutlet]="nav"></div>
-       <ul ngbNav #nav="ngbNav" class="nav-tabs">
-          <li ngbNavItem="engagement" class="tabs">
+       <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
+          <li ngbNavItem="1" class="tabs">
+            <a ngbNavLink></a>
              <ng-template ngbNavContent>
                 <div class="row">
                    <div class="col-md-6 design-left">
@@ -75,9 +76,9 @@
                    </div>
                 </div>
              </ng-template>
-             <a ngbNavLink></a>
           </li>
-          <li ngbNavItem class="tabs1">
+          <li ngbNavItem="2" class="tabs1">
+            <a ngbNavLink></a>
              <ng-template ngbNavContent>
                 <div class="row">
                    <div class="col-md-6 design-left">
@@ -128,9 +129,9 @@
                    </div>
                 </div>
              </ng-template>
-             <a ngbNavLink></a>
           </li>
-          <li ngbNavItem class="tabs1">
+          <li ngbNavItem="3" class="tabs1">
+            <a ngbNavLink></a>
              <ng-template ngbNavContent>
                 <div class="row">
                    <div class="col-md-6 design-left">
@@ -180,9 +181,9 @@
                    </div>
                 </div>
              </ng-template>
-             <a ngbNavLink></a>
           </li>
-          <li ngbNavItem class="tabs1">
+          <li ngbNavItem="4" class="tabs1">
+            <a ngbNavLink></a>
              <ng-template ngbNavContent>
                 <div class="row">
                    <div class="col-md-6 design-left">
@@ -232,9 +233,7 @@
                    </div>
                 </div>
              </ng-template>
-             <a ngbNavLink></a>
           </li>
-         
        </ul>
       </div>
     </div>
