--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -1,1 +1,171 @@
-<p>health-care works!</p>
+<div class="works">
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="banner-header">
+                        <h2>To adapt organic food as a Lifestyle</h2>
+                        <h6>UX <span>. UI .</span><span> Mobile</span></h6>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="container">
+                        <img src="./assets/images/works/mobile.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="about-project">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="container">
+                    <h2>About Project</h2>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="container">
+                    <p>With a shift towards organic food consumption by people, and increased middle-men commissions the life of a normal farmer becomes worse day by day. This platform helps the local farming communities to produce food based on customer demand and deliver them directly avoiding the middle-men thus creating a sustainable and happy farming community.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="image">
+        <img src="./assets/images/works/healthcare1.png">
+    </div>
+    <div class="approach">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>Approach</h2>
+                    <p>The idea was no to just help consumers buy organic food from the farmer but to build a platform where homemakers can share their culinary skills and learn from others</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="target-strategy">
+        <div class="container">
+            <div class="target">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Target Audience</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Local farming community which are close by the city</p>
+                        <p>Organic food consumers</p>
+                        <p>Inorganic food consumers</p>
+                    </div>
+                </div>
+            </div>
+            <div class="strategy">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Strategy</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Help users to plan their cooking menu and help them buy the right vegetables and groceries that they need for their entire week or month.</p>
+                        <p>Also to share their recipes with the community and learn from fellow homemakers.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="needs-challenges">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <h1>23+</h1>
+                <h2>Users Interviewed</h2>
+            </div>
+            <div class="col-md-8">
+                <div class="needs">
+                    <div class="needs-right">
+                       <h6>Needs</h6>
+                       <p>Weekly pre-planned vegetable + groceries list for the whole family</p>
+                       <p>A place to buy goods in fast and easy way</p>
+                       <p>A Food Chart to avoid "daily new recipe" confusion</p>
+                       <p>Health benefits of the Goods and Recipes</p>
+                       <p>Recipe suggestions based on Taste, Quality, Time, Health</p>
+                    </div>
+                    <div class="needs-right">
+                        <h6>Challenges</h6>
+                        <p>Planning what vegetables to buy for the week</p>
+                        <p>Identifying the right authentic shops that sells quality products</p>
+                        <p>Don’t have knowledge about how much quantity to buy for family</p>
+                        <p>Finds it difficult to do all the purchases all alone</p>
+                        <p>Difficult to find and cook new and tasty dishes every now and then</p>
+                    </div>
+                 </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="research">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-7">
+                    <h6>Understanding user behavior through qualitative research helped in designing interesting solutions for users</h6>
+                    <p>Diving deep into the user journey unraveled their pain points their emotions and challenges that the under go. This was handy in the further stages of design which included wire framing the concepts and building a prototypes which was tested for feedbacks by iterations.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="green-image">
+        <img src="./assets/images/works/healthcare2.png">
+    </div>
+    <div class="work-description1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="./assets/images/works/healthcare3.png">
+                </div>
+                <div class="col-md-6">
+                    <h6>Prototyping the ideas by building low fidelity wireframes</h6>
+                    <p>One of the initial that arose through the ideating sessions is to build a feature that helps people to plan their weekly menu and get the right amount of vegetables that's needed for the entire week to avoid last minute panic and confusions of what to cook.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="work-description2">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6>Meal Planner</h6>
+                    <p>A weekly planner to help user plan their weekly menu to plan ahead what to buy</p>
+                </div>
+                <div class="col-md-8">
+                    <img src="./assets/images/works/healthcare4.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="design">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h6>Build a design system that could be used through their multiple user portals</h6>
+                </div>
+                <div class="col-md-6">
+                    <img src="./assets/images/works/healthcare5.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/healthcare6.png">
+    </div>
+    <div class="work-layout">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6>Meal Planner</h6>
+                    <p>User testing were done and the designs were further iterated to hit the market with less friction for users</p>
+                </div>
+                <div class="col-md-8"></div>
+            </div>
+        </div>
+    </div>
+    <div class="other-case-study"></div>
+</div>
