--- a/src/app/modules/work/components/health-care/health-care.component.scss
+++ b/src/app/modules/work/components/health-care/health-care.component.scss
@@ -33,6 +33,12 @@ h6{
         background-color: #3C3C3C;
         color: #FCFCFC;
         padding: 200px 0px;
+        h2{
+            margin-bottom: 30px;
+        }
+        p{
+            line-height: 40px;
+        }
     }
     .target-strategy{
         background-color: #FCFCFC;
@@ -137,6 +143,91 @@ h6{
             line-height: 40px;
         }
     } 
-    .other-case-study{
 
-    } 
+    .other-case-studies{
+        .row{
+            margin-left: 0;
+            margin-right: 0;
+            .col-md-6.right{
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+       .left{
+           padding: 40px 130px 80px 90px;
+           background-color: #FF424B;
+           h2{
+               font-weight: 400;
+               color: #FFF;
+               margin-top: 120px;
+               margin-bottom: 80px;
+           }
+           .btn{
+               background-color: #FFF;
+               border-radius: 0;
+               color: #FF424B;
+               cursor: pointer;
+               font-size: 20px;
+               font-weight: 400;
+                img{
+                    padding-left: 12px;
+                }
+           }
+       }
+       .right{
+           .class{
+               .image{
+                   img{
+                       width: 100%;
+                   }
+               }
+               h3{
+                   font-size: 36px;
+                   font-weight: 500;
+                   margin: 40px 130px 20px 40px;
+               }
+               h4{
+                   font-size: 20px;
+                   font-weight: 400;
+                   margin: 0 0 10px 40px;
+               }
+           }
+       }
+    }
+
+// Carousel
+.item{
+    padding: 0;
+}
+.ngucarousel-indicator{
+    width: 100%;
+    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-left: 40px;
+    li{
+        display: inline-block;
+        line-height: 22px;
+        a{
+            display: block;
+            margin: 0 5px;
+            width: 15px;
+            height: 15px;
+            border: 2px solid #FFF;
+            background-color: #D0D0D0 !important;
+            text-indent: -999px;
+            overflow: hidden;
+            border-radius: 10px;
+            cursor: pointer;
+            &.active{
+                width: 11px;
+                height: 11px;
+                border: 8px solid #FF424B;
+                background-color: #FF424B !important;
+            }
+        }
+    }
+}
+::ng-deep .tile{
+    border-radius: 15px;
+    box-shadow: none !important;
+}
