--- a/src/app/modules/work/components/event-management/event-management.component.html
+++ b/src/app/modules/work/components/event-management/event-management.component.html
@@ -1,1 +1,160 @@
-<p>event-management works!</p>
+<div class="works">
+    <div class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="banner-header">
+                        <h2>Event Hosting made stressless</h2>
+                        <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="container">
+                        <img src="./assets/images/works/mobile.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="about-project">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="container">
+                    <h2>About Project</h2>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="container">
+                    <p>Marriages and family events are more emotionally connected to people’s lives in India; and the current generation is ready to outsource the events and sit back to enjoy a peaceful event without the hassles of organizing themselves. Connecting the dots between these two segments is the role of the platform.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="image">
+        <img src="./assets/images/works/event1.png">
+    </div>
+    <div class="approach">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <h2>Approach</h2>
+                    <p>Our aim was to make the process more personal and reducing the stress involved while making important decisions</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="target-strategy">
+        <div class="container">
+            <div class="target">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Target Audience</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>Venue Managers/Owners, Decorators, Photographers, Make-up artists, Stage Performers, Fashion Designers, Individuals Corporates in search of venue or event vendors</p>
+                    </div>
+                </div>
+            </div>
+            <div class="strategy">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h6>Strategy</h6>
+                    </div>
+                    <div class="col-md-8">
+                       <p>Helping the user to select the best Venue, Caterer, Photographer, Decorator, etc for their event by providing social proof, reviews from trusted sources, previous works, budget and comparison.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="needs-challenges">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>100 +</h1>
+                <h2>Users Interviewed</h2>
+            </div>
+            <div class="col-md-8">
+                <div class="needs">
+                    <div class="needs-right">
+                       <h6>Needs</h6>
+                       <p> Shortlisted set of services that match your budget and spl. occasion</p>
+                       <p> Break down of the total cost for the service</p>
+                       <p> Similar works, Testimonials, Videos</p>
+                       <p> Team members, Portfolio</p>
+                       <p> Contact inline, Request call via phone</p>
+                    </div>
+                    <div class="needs-right">
+                        <h6>Challenges</h6>
+                        <p> Decidophobia, Dilemma of selecting an option</p>
+                        <p> Not having a clarity on the cost of the service</p>
+                        <p> How skilled is this service provider?</p>
+                        <p> How many events have they done in past?</p>
+                        <p> What is the track record of this service provider?</p>
+                        <p> How to get in touch with the right service provider?</p>
+                    </div>
+                 </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="research">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5"></div>
+                <div class="col-md-7">
+                    <h6>Converting qualitative and quantitative data collected from research into design solutions</h6>
+                    <p>With the gathered data, We go ahead with the process of Information architecture, Task-flows, Wire frames, Feature mapping, prototyping to match our conceptual model to user’s mental models</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="green-image">
+        <img src="./assets/images/works/healthcare2.png">
+    </div>
+    <div class="work-description">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6>Logo Story</h6>
+                    <p>Balloons depict celebration, for all kinds of events. Right from Birthdays, Parties, Weddings, etc And because event management is all about gathering at a place to celebrate. Location plays a vital role</p>
+                </div>
+                <div class="col-md-8">
+                    <img src="./assets/images/works/healthcare4.png">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/healthcare6.png">
+    </div>
+    <div class="other-case-studies">
+        <div class="row">
+            <div class="col-md-6 left">
+                <h2>Other Case Studies</h2>
+                <div class="button">
+                    <div class="btn">See All Works <img src="./assets/images/home/red-arrow.png"></div>
+                </div>
+            </div>
+            <div class="col-md-6 right">
+                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
+                    <ngu-tile *nguCarouselDef="let item; let i = index">
+                        <div class="class">
+                            <div class="image">
+                                <img [src]="item.img">
+                            </div>
+                            <h3>{{ item.title }}</h3>
+                            <h4>{{ item.sub }}</h4>
+                        </div>
+                    </ngu-tile>
+                    <ul class="ngucarousel-indicator" NguCarouselPoint>
+                      <li *ngFor="let pointer of blogCarousel.pointNumbers; let i = index">
+                        <a (click)="blogCarousel.moveTo(i)" [class.active]="blogCarousel.activePoint == i">&nbsp;</a>
+                      </li>
+                    </ul>
+                </ngu-carousel>
+            </div>
+        </div>
+    </div>
+</div>
