--- a/src/app/modules/work/components/health-care/health-care.component.scss
+++ b/src/app/modules/work/components/health-care/health-care.component.scss
@@ -15,6 +15,10 @@ h6{
         .banner-header{
             padding: 150px 0px;
         }
+        h6{
+            font-weight: 300;
+            margin-top: 30px;
+        }
     }
     .about-project{
         background-color: #FCFCFC;
